welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:1: error: Missing closing brace `}' assumed here
def max1020(a:Int, b:Int):Int = {
^max1020:2: error: Missing closing brace `}' assumed here
var rep = 0 ;
^max1020:3: error: expected class or object definition
if (a<=20 & a>=10) { if (b<=20 & b>=10) {rep = Math.max(a,b)}
^